# handler/http/v1/modelkit.go
@@ -6,7 +6,7 @@ import (
 	"github.com/labstack/echo/v4"
 
 	"github.com/chaitin/ModelKit/domain"
-	"github.com/chaitin/ModelKit/modelkit"
+	"github.com/chaitin/ModelKit/usecase"
 )
 
 type ModelKitHandler struct {
@@ -16,12 +16,13 @@ type ModelKitHandler struct {
 func NewModelKitHandler(
 	echo *echo.Echo,
 ) *ModelKitHandler {
-	m := &ModelKitHandler{usecase: modelkit.NewModelKit()}
+	m := &ModelKitHandler{usecase: usecase.NewModelKit()}
 
 	g := echo.Group("/api/v1/model/modelkit")
 
 	g.POST("/check", m.CheckModel)
 	g.GET("/models", m.ListModel)
+	g.GET("/panda/models", m.PandaModelList)
 
 	return m
 }
@@ -76,6 +77,39 @@ func (h *ModelKitHandler) ListModel(c echo.Context) error {
 		})
 	}
 	models, err := h.usecase.ListModel(c.Request().Context(), &req)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, domain.Resp{
+			Code:    1,
+			Message: err.Error(),
+		})
+	}
+	return c.JSON(http.StatusOK, domain.Resp{
+		Code:    0,
+		Message: "success",
+		Data:    models,
+	})
+}
+
+// PandaModelList 获取模型列表
+//
+//	@Tags			ModelKitModel
+//	@Summary		获取模型列表
+//	@Description	获取模型列表
+//	@ID				panda-model-list
+//	@Accept			json
+//	@Produce		json
+//	@Param			req	query		domain.GetProviderModelListReq	true	"模型"
+//	@Success		200	{object}	domain.Resp{data=domain.GetProviderModelListResp}
+//	@Router			/api/v1/model/modelkit/panda/models [get]
+func (h *ModelKitHandler) PandaModelList(c echo.Context) error {
+	var req domain.GetProviderModelListReq
+	if err := c.Bind(&req); err != nil {
+		return c.JSON(http.StatusBadRequest, domain.Resp{
+			Code:    1,
+			Message: err.Error(),
+		})
+	}
+	models, err := usecase.PandaModelList(c.Request().Context(), req.Provider, req.APIKey, req.BaseURL, req.APIHeader, req.Type, req.Type)
 	if err != nil {
 		return c.JSON(http.StatusInternalServerError, domain.Resp{
 			Code:    1,
